<resources>
    <string name="app_name">WatsonAshton_HelperTracker</string>
    <string name="app_name_title">HelperTracker</string>
    <string name="underline_text"><u>New User?</u></string>
    <string name="underline_account_text"><u>Already an user?</u></string>
    <string name="log_in">Log In</string>
    <string name="button">Button</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="height">Height:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="weight">Weight:</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_add_your_first_contact_to_get_started">Please add your first contact to get started.</string>
    <string name="save">save</string>
    <string name="address">Address:</string>
    <string name="lon">Lon:</string>
    <string name="last_update_time">Last Update Time:</string>
    <string name="push_the_red_button_in_case_of_emergency">Push the red button in case of emergency</string>
    <string name="lat">Lat:</string>
    <string name="stop_signal">Stop Signal</string>
    <string name="please_add_a_contact_to_continue_once_added_and_saved_we_will_send_a_test_signal_to_them">Please add a contact to continue. Once added and saved we will send a test signal to them.</string>
    <string name="stop_singal">Signals are being sent out every five minutes. Click the \'Stop Signal\' button to stop the broadcasts</string>
    <string name="contacts">contacts</string>
    <string name="profile">profile</string>
    <string name="logout">logOut</string>
    <string name="contactsAdd">contactsAdd</string>
    <string name="contactSaved">contactSaved</string>
    <string name="editIcon">editIcon</string>
    <string name="trash">trash</string>
    <string name="first_names">First Name:</string>
    <string name="hair">hair</string>
    <string name="Please_fill_in_all_fields">Please fill in all fields</string>
    <string name="Please_fill_out_all_fields_to_continue.">Please fill out all fields to continue."</string>
    <string name="eye">eye</string>
    <string name="Please_add_a_contact_before_continuing.">Please add a contact before continuing.</string>
    <string name="You_have_log_out">You have log out</string>
    <string name="You_didnt_log_out">You didn\'t log out</string>
    <string name="weights">weight</string>
    <string name="Not_a_valid_number_please_use_this_format_123456789">Not a valid number please use this format: 123456789</string>
    <string name="Contact_was_not_saved.">"Contact was not saved.</string>
    <string name="last">last</string>
    <string name="heights">height</string>
    <string name="Signal_has_been_sent_out_please_check_with_the_receiver_to_confirmed.">Signal has been sent out, please check with the receiver to confirmed.</string>
    <string name="No_more_then_three_contacts_are_allowed_to_be_added">No more then three contacts are allowed to be added</string>
    <string name="Contact_was_edited_and_save">Contact was edited and save</string>
    <string name="Log_In">Log In</string>


    <string name="last_names">Last Name:</string>
    <string name="first">first</string>


    <array name="heightArray">
        <item name="4'8">4\'8\"</item>
        <item name="4'9">4\'9\"</item>
        <item name="5'0">5\'0</item>
        <item name="5'1">5\'1\"</item>
        <item name="5'2">5\'2\"</item>
        <item name="5'3">5\'3\"</item>
        <item name="5'4">5\'4\"</item>
        <item name="5'5">5\'5\"</item>
        <item name="5'6">5\'6\"</item>
        <item name="5'7">5\'7\"</item>
        <item name="5'8">5\'8\"</item>
        <item name="5'9">5\'9\"</item>
        <item name="6'0">6\'0</item>
        <item name="6'1">6\'1\"</item>
        <item name="6'2">6\'2\"</item>
        <item name="6'3">6\'3\"</item>
        <item name="6'4">6\'4\"</item>
        <item name="6'5">6\'5\"</item>
        <item name="6'6">6\'6\"</item>
        <item name="6'7">6\'7\"</item>
        <item name="6'8">6\'8\"</item>
        <item name="6'9">6\'9\"</item>
        <item name="7'0">7\'0</item>
    </array>
    <array name="hairColorArray">
        <item name="red">Red</item>
        <item name="blonde">Blonde</item>
        <item name="brunette">Brunette</item>
        <item name="black">Black</item>
    </array>
    <array name="eyeColorArray">
        <item name="brown">Brown</item>
        <item name="blue">Blue</item>
        <item name="hazel">Hazel</item>
        <item name="amber">Amber</item>
        <item name="gray">Gray</item>
        <item name="amber">Green</item>

    </array>
</resources>