<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewFirstContactDescription"
        android:layout_width="335dp"
        android:layout_height="122dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="38dp"
        android:text="@string/please_add_a_contact_to_continue_once_added_and_saved_we_will_send_a_test_signal_to_them"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstContactFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstContactDescription" />

    <EditText
        android:id="@+id/editTextFirstContactLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstContactFirstName"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstContactFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstContactFirstName" />

    <EditText
        android:id="@+id/editTextFirstContactPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstContactLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstContactLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstContactLastName" />

</androidx.constraintlayout.widget.ConstraintLayout>