<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="72dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="148dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLon"
        android:layout_width="40dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/lon"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewLat"
        app:layout_constraintTop_toBottomOf="@+id/textViewLat" />

    <TextView
        android:id="@+id/textViewLastUpdateTime"
        android:layout_width="153dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_update_time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewLon"
        app:layout_constraintTop_toBottomOf="@+id/textViewLon" />

    <TextView
        android:id="@+id/textViewInsturcutons"
        android:layout_width="312dp"
        android:layout_height="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="228dp"
        android:text="@string/push_the_red_button_in_case_of_emergency"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastUpdateTime" />

    <TextView
        android:id="@+id/textViewLat"
        android:layout_width="39dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/lat"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <Button
        android:id="@+id/buttonStopSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="23dp"
        android:text="@string/stop_signal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInsturcutons" />

    <TextView
        android:id="@+id/textViewAddressFillIn"
        android:layout_width="295dp"
        android:layout_height="22dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewAddress"
        app:layout_constraintTop_toTopOf="@+id/textViewAddress" />

    <TextView
        android:id="@+id/textViewLatFillIn"
        android:layout_width="326dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewLat"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddressFillIn" />

    <TextView
        android:id="@+id/textViewLonFillIn"
        android:layout_width="326dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewLon"
        app:layout_constraintTop_toBottomOf="@+id/textViewLatFillIn" />

    <TextView
        android:id="@+id/textViewLastUpdateTimeFillIn"
        android:layout_width="368dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewLastUpdateTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastUpdateTime" />

    <ImageView
        android:id="@+id/imageViewStartSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/textViewInsturcutons"
        app:layout_constraintStart_toStartOf="@+id/textViewInsturcutons"
        app:srcCompat="@drawable/red_button_icon_image_pixabay_15"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>